src/test/resources/automata/cocos/invalid/StateDoesNotStartWithCapitalLetter.aut
/* (c) https://github.com/MontiCore/monticore */

automata C {
  state S  <<initial>> <<final>>;
  state notCapital;
}
